added new games and justification category

--- a/pages/categories.html
+++ b/pages/categories.html
@@ -24,6 +24,7 @@
       <h5><a href="gibberish.html">Gibberish</a></h5>
       <h5><a href="group.html">Group Games</a></h5>
       <h5><a href="guessing.html">Guessing</a></h5>
+      <h5><a href="justification.html">Justification</a></h5>
       <h5><a href="interview.html">Interview</a></h5>
       <h5><a href="listening.html">Listening</a></h5>
       <h5><a href="long_forms.html">Long Forms</a></h5>
