--- a/pages/character.html
+++ b/pages/character.html
@@ -15,10 +15,17 @@
 </header>
 <body>
 	<h1 class="text-center my-3">Character</h1>
+	<p class="text-center my-3">These games and exercises involve the exploration and/or discovery characters.</p>
 		<div class="m-5 games-list">
 			<ul class="py-3">
 				<li>
 					<h5><a href="#adjectiveAdjectiveName">Adjective Adjective Name</a></h5>
+				</li>
+				<li>
+					<h5><a href="#characterPanel">Character Panel</a></h5>
+				</li>
+				<li>
+					<h5><a href="#characterMatching">Character Matching</a></h5>
 				</li>
 			</ul>
 		</div>
@@ -30,9 +37,32 @@
 	<div class="game-box p-2" id="adjectiveAdjectiveName">
 		<h3>Adjective Adjective Name</h3>
 		<hr>
-		<p>Description: description</p>
-		<h6>tags</h6>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
 		<a href="character.html">Character</a> - <a href="exercises.html">Exercise</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- CHARACTER PANEL ---------- -->
+	<div class="game-box p-2" id="characterPanel">
+		<h3>Character Panel</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Two players start a scene and a third acts as a host. The host will ring a bell or say a phrase like change! or new decision! periodically after a line of dialogue has been said. The player who said that last line of dialoque will have to say a new line of dialogue to replace it.</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Player 1: What do you want?</li><li>Player 2: I want a muffin.</li><li>Host: Change!</li><li>Player 2: I want a whole cake to myself</li><li>Host: Change!</li><li>Player 2: I want you to love me again!</li></ul></p><hr><p><strong>Tips:</strong><ul><li>Try to heighten each time you are made to change a line of dialogue and go for a drastic change on the third changed line.</li><br><li>As the host, utilize the rule of three most of the time, only occasionally making the players change only one line of dialogue or making them change many lines in a long run of changes.</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="character.html">Character</a> - <a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="performance.html">Performance</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- CHARACTER MATCHING ---------- -->
+	<div class="game-box p-2" id="characterMatching">
+		<h3>Character Matching</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="character.html">Character</a> - <a href="exercises.html">Exercise</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
