--- a/pages/guessing.html
+++ b/pages/guessing.html
@@ -15,6 +15,7 @@
 </header>
 <body>
 	<h1 class="text-center my-3">Guessing</h1>
+	<p class="text-center my-3">These usually involve one player, the guesser, leaving the room while the other players get suggestions for characters to play. The guesser then has to return and act out some kind of scene with the characters, eventually guessing who they are or what traits they were given based off of hints from the character players.</p>
 		<div class="m-5 games-list">
 			<ul class="py-3">
 				<li>
@@ -30,8 +31,7 @@
 	<div class="game-box p-2" id="chainMurder">
 		<h3>Chain Murder</h3>
 		<hr>
-		<p>Description: description</p>
-		<h6>tags</h6>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
 		<a href="gibberis.html">Gibberish</a> - <a href="guessing.html">Guessing</a> - <a href="object_work.html">Object Work</a> - <a href="performance.html">Performance</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
