--- a/pages/audience_participation.html
+++ b/pages/audience_participation.html
@@ -18,12 +18,27 @@
 	<p class="text-center my-3">These games involve bringing memebers of the audience on stage to participate in an active way.</p>
 		<div class="m-5 games-list">
 			<ul class="py-3">
+				<li>
+					<h5><a href="#pillars">Pillars</a></h5>
+				</li>
 			</ul>
 		</div>
 
 <hr class="thick-hr">
 
 <div class="m-5">
+	<!-- ---------- PILLARS ---------- -->
+	<div class="game-box p-2" id="pillars">
+		<h3>Pillars</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="audience_participation.html">Audience Participation</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
 </div>
 <p class="white">built</p></body>
 <footer>
