--- a/pages/exercises.html
+++ b/pages/exercises.html
@@ -15,6 +15,7 @@
 </header>
 <body>
 	<h1 class="text-center my-3">Exercises</h1>
+	<p class="text-center my-3">These exercises are meant to develop various improvisational skills.</p>
 		<div class="m-5 games-list">
 			<ul class="py-3">
 				<li>
@@ -56,6 +57,18 @@
 				<li>
 					<h5><a href="#bubsyBerkeley">Bubsy Berkeley</a></h5>
 				</li>
+				<li>
+					<h5><a href="#characterPanel">Character Panel</a></h5>
+				</li>
+				<li>
+					<h5><a href="#characterMatching">Character Matching</a></h5>
+				</li>
+				<li>
+					<h5><a href="#dontTalkAboutTheThing">Don't Talk about the Thing</a></h5>
+				</li>
+				<li>
+					<h5><a href="#mindMeld">Mind Meld</a></h5>
+				</li>
 			</ul>
 		</div>
 
@@ -66,8 +79,7 @@
 	<div class="game-box p-2" id="60SecondsOfSilence">
 		<h3>60 Seconds of Silence</h3>
 		<hr>
-		<p>Description: description</p>
-		<h6>tags</h6>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="scene.html">Scenework</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -79,8 +91,7 @@
 	<div class="game-box p-2" id="adjectiveAdjectiveName">
 		<h3>Adjective Adjective Name</h3>
 		<hr>
-		<p>Description: description</p>
-		<h6>tags</h6>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
 		<a href="character.html">Character</a> - <a href="exercises.html">Exercise</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -92,8 +103,7 @@
 	<div class="game-box p-2" id="aRealReason">
 		<h3>A Real Reason</h3>
 		<hr>
-		<p>Description: description</p>
-		<h6>tags</h6>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -105,8 +115,7 @@
 	<div class="game-box p-2" id="adGame">
 		<h3>Ad Game</h3>
 		<hr>
-		<p>Description: description</p>
-		<h6>tags</h6>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -118,8 +127,7 @@
 	<div class="game-box p-2" id="acapellaHarmonies">
 		<h3>Acapella Harmonies</h3>
 		<hr>
-		<p>Description: description</p>
-		<h6>tags</h6>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="musical.html">Musical</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -131,8 +139,7 @@
 	<div class="game-box p-2" id="alienTigerCow">
 		<h3>Alien Tiger Cow</h3>
 		<hr>
-		<p>Description: description</p>
-		<h6>tags</h6>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
 		<a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="party.html">Party</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -144,8 +151,7 @@
 	<div class="game-box p-2" id="alphabetGame">
 		<h3>Alphabet Game</h3>
 		<hr>
-		<p>Description: description</p>
-		<h6>tags</h6>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -157,8 +163,7 @@
 	<div class="game-box p-2" id="badRap">
 		<h3>Bad Rap</h3>
 		<hr>
-		<p>Description: description</p>
-		<h6>tags</h6>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -170,8 +175,7 @@
 	<div class="game-box p-2" id="band">
 		<h3>Band</h3>
 		<hr>
-		<p>Description: description</p>
-		<h6>tags</h6>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="performance.html">Performance</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -183,8 +187,7 @@
 	<div class="game-box p-2" id="beastieBoys">
 		<h3>Beastie Boys</h3>
 		<hr>
-		<p>Description: description</p>
-		<h6>tags</h6>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="performance.html">Performance/Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -196,8 +199,7 @@
 	<div class="game-box p-2" id="beastieRap">
 		<h3>Beastie Rap</h3>
 		<hr>
-		<p>Description: description</p>
-		<h6>tags</h6>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -209,8 +211,7 @@
 	<div class="game-box p-2" id="bigBooty">
 		<h3>Big Booty</h3>
 		<hr>
-		<p>Description: description</p>
-		<h6>tags</h6>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="party.html">Part</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -222,11 +223,56 @@
 	<div class="game-box p-2" id="bubsyBerkeley">
 		<h3>Bubsy Berkeley</h3>
 		<hr>
-		<p>Description: Named after the famous MGM musicals choreographer</p>
-<p>Form a symmetrical shape on stage and put on some high impact music</p>
-<p>Take a suggestion for a title or piece</p>
-		<h6>tags</h6>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
 		<a href="energy.html">Energy</a> - <a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="performance.html">Performance</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- CHARACTER PANEL ---------- -->
+	<div class="game-box p-2" id="characterPanel">
+		<h3>Character Panel</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Two players start a scene and a third acts as a host. The host will ring a bell or say a phrase like change! or new decision! periodically after a line of dialogue has been said. The player who said that last line of dialoque will have to say a new line of dialogue to replace it.</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Player 1: What do you want?</li><li>Player 2: I want a muffin.</li><li>Host: Change!</li><li>Player 2: I want a whole cake to myself</li><li>Host: Change!</li><li>Player 2: I want you to love me again!</li></ul></p><hr><p><strong>Tips:</strong><ul><li>Try to heighten each time you are made to change a line of dialogue and go for a drastic change on the third changed line.</li><br><li>As the host, utilize the rule of three most of the time, only occasionally making the players change only one line of dialogue or making them change many lines in a long run of changes.</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="character.html">Character</a> - <a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="performance.html">Performance</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- CHARACTER MATCHING ---------- -->
+	<div class="game-box p-2" id="characterMatching">
+		<h3>Character Matching</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="character.html">Character</a> - <a href="exercises.html">Exercise</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- DON'T TALK ABOUT THE THING ---------- -->
+	<div class="game-box p-2" id="dontTalkAboutTheThing">
+		<h3>Don't Talk about the Thing</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="exercises.html">Exercise</a> - <a href="object_work.html">Object Work</a> - <a href="scene.html">Scenework</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- MIND MELD ---------- -->
+	<div class="game-box p-2" id="mindMeld">
+		<h3>Mind Meld</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
