--- a/pages/gibberish.html
+++ b/pages/gibberish.html
@@ -15,6 +15,7 @@
 </header>
 <body>
 	<h1 class="text-center my-3">Gibberish</h1>
+	<p class="text-center my-3">These games and exercises involve scenes where players must act and/or communicate without any real dialogue, only gibberish or sometimes numbers.</p>
 		<div class="m-5 games-list">
 			<ul class="py-3">
 				<li>
@@ -30,8 +31,7 @@
 	<div class="game-box p-2" id="chainMurder">
 		<h3>Chain Murder</h3>
 		<hr>
-		<p>Description: description</p>
-		<h6>tags</h6>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
 		<a href="gibberis.html">Gibberish</a> - <a href="guessing.html">Guessing</a> - <a href="object_work.html">Object Work</a> - <a href="performance.html">Performance</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
