--- a/pages/long_forms.html
+++ b/pages/long_forms.html
@@ -1,39 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Long Forms</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="../styles/style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Long Forms</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<link rel="stylesheet" href="../styles/style.css">
 </head>
-<header>
-  <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+<header id="top">
+	<div class="d-flex flex-wrap justify-content-around">
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+	</div>
 </header>
 <body>
-  <h1 class="text-center">Long Forms</h1>
-  <div>
-    <h5><a href="#54321">5-4-3-2-1</a></h5>
-    <h5><a href="#balladeer">Balladeer</a></h5>
-    <h5><a href="#bat">Bat</a></h5>
-    <h5><a href="#chooseYourOwnAdventure">Choose Your Own Adventure</a></h5>
-    <h5><a href="#frenchBraid">FrenchBraid</a></h5>
-    <h5><a href="#harold">Harold</a></h5>
-    <h5><a href="#hotelLobby"></a></h5>
-    <h5><a href="#laRonde">La Ronde</a></h5>
-    <h5><a href="#livingRoom">Living Room</a></h5>
-    <h5><a href="#musical">Musical</a></h5>
-    <h5><a href="#narrative">Narrative</a></h5>
-    <h5><a href="organic">Organic</a></h5>
-    <h5><a href="#roadTrip">Road Trip</a></h5>
-    <h5><a href="#tabletopRPG">Tabletop RPG</a></h5>
-    <h5><a href="../index.html">Home</a></h5>
-  </div>
-  <footer>
-    <div class="d-flex flex-wrap justify-content-around">
-      <h5 class="mx-5 py-2"><a href="index.html">Home</a>
-      <h5 class="mx-5 py-2"><a href="pages/categories.html">Games Exerciese and Formats</a>
-    </div>
-  </footer>
-</body>
+	<h1 class="text-center my-3">Long Forms</h1>
+	<p class="text-center my-3">These formats serve as the basic for many verying long form shows.</p>
+		<div class="m-5 games-list">
+			<ul class="py-3">
+				<li>
+					<h5><a href="#5-4-3-2-1">5-4-3-2-1</a></h5>
+				</li>
+				<li>
+					<h5><a href="#balladeer">Balladeer</a></h5>
+				</li>
+				<li>
+					<h5><a href="#bat">Bat</a></h5>
+				</li>
+			</ul>
+		</div>
+
+<hr class="thick-hr">
+
+<div class="m-5">
+	<!-- ---------- 5-4-3-2-1 ---------- -->
+	<div class="game-box p-2" id="5-4-3-2-1">
+		<h3>5-4-3-2-1</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="long_forms.html">Long Form</a> - <a href="performance.html">Performance</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- BALLADEER ---------- -->
+	<div class="game-box p-2" id="balladeer">
+		<h3>Balladeer</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="long_forms.html">Long Form</a> - <a href="musical.html">Musical</a> - <a href="narrative.html">narrative</a> - <a href="performance.html">performance</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- BAT ---------- -->
+	<div class="game-box p-2" id="bat">
+		<h3>Bat</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="long_forms.html">Long Form</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+</div>
+<p class="white">built</p></body>
+<footer>
+	<div class="d-flex flex-wrap justify-content-around">
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+	</div>
+</footer>
 </html>
