--- a/pages/musical.html
+++ b/pages/musical.html
@@ -1,29 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Musical</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="../styles/style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Musical</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<link rel="stylesheet" href="../styles/style.css">
 </head>
-<header>
-  <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+<header id="top">
+	<div class="d-flex flex-wrap justify-content-around">
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+	</div>
 </header>
 <body>
-  <h1 class="text-center">Musical Games & Exercises</h1>
-  <div>
-    <h5><a href=""></a></h5>
-    <h5><a href=""></a></h5>
-    <h5><a href=""></a></h5>
-    <h5><a href=""></a></h5>
-    <h5><a href="../index.html">Home</a></h5>
-  </div>
-  <footer>
-    <div class="d-flex flex-wrap justify-content-around">
-      <h5 class="mx-5 py-2"><a href="index.html">Home</a>
-      <h5 class="mx-5 py-2"><a href="pages/categories.html">Games Exerciese and Formats</a>
-    </div>
-  </footer>
-</body>
+	<h1 class="text-center my-3">Musical</h1>
+	<p class="text-center my-3">These games and exercises take improv into the musical realm, incorporating song and dance into our improv scenes.</p>
+		<div class="m-5 games-list">
+			<ul class="py-3">
+				<li>
+					<h5><a href="#acapellaHarmonies">Acapella Harmonies</a></h5>
+				</li>
+				<li>
+					<h5><a href="#badRap">Bad Rap</a></h5>
+				</li>
+				<li>
+					<h5><a href="#ballad">Ballad</a></h5>
+				</li>
+				<li>
+					<h5><a href="#balladeer">Balladeer</a></h5>
+				</li>
+				<li>
+					<h5><a href="#band">Band</a></h5>
+				</li>
+				<li>
+					<h5><a href="#bardsBallad">Bard's Ballad</a></h5>
+				</li>
+				<li>
+					<h5><a href="#beastieBoys">Beastie Boys</a></h5>
+				</li>
+				<li>
+					<h5><a href="#beastieRap">Beastie Rap</a></h5>
+				</li>
+				<li>
+					<h5><a href="#blues">Blues</a></h5>
+				</li>
+				<li>
+					<h5><a href="#bubsyBerkeley">Bubsy Berkeley</a></h5>
+				</li>
+			</ul>
+		</div>
+
+<hr class="thick-hr">
+
+<div class="m-5">
+	<!-- ---------- ACAPELLA HARMONIES ---------- -->
+	<div class="game-box p-2" id="acapellaHarmonies">
+		<h3>Acapella Harmonies</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="exercises.html">Exercise</a> - <a href="musical.html">Musical</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- BAD RAP ---------- -->
+	<div class="game-box p-2" id="badRap">
+		<h3>Bad Rap</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- BALLAD ---------- -->
+	<div class="game-box p-2" id="ballad">
+		<h3>Ballad</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="interview.html">Interview</a> - <a href="musical.html">Musical</a> - <a href="performance.html">Performance</a> - <a href="song_formats.html">Song Format</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- BALLADEER ---------- -->
+	<div class="game-box p-2" id="balladeer">
+		<h3>Balladeer</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="long_forms.html">Long Form</a> - <a href="musical.html">Musical</a> - <a href="narrative.html">narrative</a> - <a href="performance.html">performance</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- BAND ---------- -->
+	<div class="game-box p-2" id="band">
+		<h3>Band</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="performance.html">Performance</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- BARD'S BALLAD ---------- -->
+	<div class="game-box p-2" id="bardsBallad">
+		<h3>Bard's Ballad</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- BEASTIE BOYS ---------- -->
+	<div class="game-box p-2" id="beastieBoys">
+		<h3>Beastie Boys</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="performance.html">Performance/Warm Up</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- BEASTIE RAP ---------- -->
+	<div class="game-box p-2" id="beastieRap">
+		<h3>Beastie Rap</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- BLUES ---------- -->
+	<div class="game-box p-2" id="blues">
+		<h3>Blues</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="performance.html">Performance</a> - <a href="song_formats.html">Song Format</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- BUBSY BERKELEY ---------- -->
+	<div class="game-box p-2" id="bubsyBerkeley">
+		<h3>Bubsy Berkeley</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="energy.html">Energy</a> - <a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="performance.html">Performance</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+</div>
+<p class="white">built</p></body>
+<footer>
+	<div class="d-flex flex-wrap justify-content-around">
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+	</div>
+</footer>
 </html>
