--- a/pages/narrative.html
+++ b/pages/narrative.html
@@ -1,46 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Narrative</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="../styles/style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Narrative</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<link rel="stylesheet" href="../styles/style.css">
 </head>
 <header id="top">
-  <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+	<div class="d-flex flex-wrap justify-content-around">
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+	</div>
 </header>
 <body>
-  <h1 class="text-center my-3">Narrative</h1>
-  <div class="m-5 games-list">
-    <ul class="py-3">
-      <li>
-        <h5><a href="#gameTitle">Game Title</a></h5>
-      </li>
-    </ul>
-  </div>
+	<h1 class="text-center my-3">Narrative</h1>
+	<p class="text-center my-3">These games and exercises follow some form of narrative structure.</p>
+		<div class="m-5 games-list">
+			<ul class="py-3">
+				<li>
+					<h5><a href="#bardsBallad">Bard's Ballad</a></h5>
+				</li>
+			</ul>
+		</div>
 
-  <hr class="thick-hr">
+<hr class="thick-hr">
 
-  <div class="m-5">
-    <!-- ---------- GAME TITLE ---------- -->
-    <div class="game-box p-2" id="gameTitle">
-      <h3>Game Title</h3>
-      <hr>
-      <p>description</p>
-      <h6>tags</h6>
-      <a href="performance_games.html">Performace</a>
-      <hr>
-      <h6><a href="#top">Back to Top</a></h6>
-    </div>
-  
-    <hr class="thick-hr">
-  </div>
-  <footer>
-    <div class="d-flex flex-wrap justify-content-around">
-      <h5 class="mx-5 py-2"><a href="index.html">Home</a>
-      <h5 class="mx-5 py-2"><a href="pages/categories.html">Games Exerciese and Formats</a>
-    </div>
-  </footer>
-</body>
+<div class="m-5">
+	<!-- ---------- BARD'S BALLAD ---------- -->
+	<div class="game-box p-2" id="bardsBallad">
+		<h3>Bard's Ballad</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+</div>
+<p class="white">built</p></body>
+<footer>
+	<div class="d-flex flex-wrap justify-content-around">
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+	</div>
+</footer>
 </html>
