--- a/pages/party.html
+++ b/pages/party.html
@@ -1,40 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Party</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="../styles/style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Party</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<link rel="stylesheet" href="../styles/style.css">
 </head>
-<header>
-  <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+<header id="top">
+	<div class="d-flex flex-wrap justify-content-around">
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+	</div>
 </header>
 <body>
-  <h1 class="text-center"></h1>Party Games</h1>
-  <div>
-    <h5><a href="">Alien Tiger Cow</a></h5>
-    <h5><a href="">Bad Boys</a></h5>
-    <h5><a href="">Big Booty</a></h5>
-    <h5><a href="">Bunny Bunny</a></h5>
-    <h5><a href="">Clovers</a></h5>
-    <h5><a href="">Golden Goose</a></h5>
-    <h5><a href="">Headlines</a></h5>
-    <h5><a href="">I am a tree</a></h5>
-    <h5><a href="">Jeepers Creepers</a></h5>
-    <h5><a href="">Moon Lust</a></h5>
-    <h5><a href="">Pointies</a></h5>
-    <h5><a href="">Thunder Dome</a></h5>
-    <h5><a href="">What are the steps</a></h5>
-    <h5><a href="">What you do for your man</a></h5>
-    <h5><a href="">Zip Zap Zop</a></h5>
-    <h5><a href="../index.html">Home</a></h5>
-  </div>
-  <footer>
-    <div class="d-flex flex-wrap justify-content-around">
-      <h5 class="mx-5 py-2"><a href="index.html">Home</a>
-      <h5 class="mx-5 py-2"><a href="pages/categories.html">Games Exerciese and Formats</a>
-    </div>
-  </footer>
-</body>
+	<h1 class="text-center my-3">Party</h1>
+	<p class="text-center my-3">These games are fun to play in large groups.</p>
+		<div class="m-5 games-list">
+			<ul class="py-3">
+				<li>
+					<h5><a href="#alienTigerCow">Alien Tiger Cow</a></h5>
+				</li>
+				<li>
+					<h5><a href="#badRap">Bad Rap</a></h5>
+				</li>
+				<li>
+					<h5><a href="#band">Band</a></h5>
+				</li>
+				<li>
+					<h5><a href="#beastieBoys">Beastie Boys</a></h5>
+				</li>
+				<li>
+					<h5><a href="#bunnyBunny">Bunny Bunny</a></h5>
+				</li>
+				<li>
+					<h5><a href="#mindMeld">Mind Meld</a></h5>
+				</li>
+			</ul>
+		</div>
+
+<hr class="thick-hr">
+
+<div class="m-5">
+	<!-- ---------- ALIEN TIGER COW ---------- -->
+	<div class="game-box p-2" id="alienTigerCow">
+		<h3>Alien Tiger Cow</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="party.html">Party</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- BAD RAP ---------- -->
+	<div class="game-box p-2" id="badRap">
+		<h3>Bad Rap</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- BAND ---------- -->
+	<div class="game-box p-2" id="band">
+		<h3>Band</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="performance.html">Performance</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- BEASTIE BOYS ---------- -->
+	<div class="game-box p-2" id="beastieBoys">
+		<h3>Beastie Boys</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="performance.html">Performance/Warm Up</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- BUNNY BUNNY ---------- -->
+	<div class="game-box p-2" id="bunnyBunny">
+		<h3>Bunny Bunny</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="child_friendly.html">Child Friendly</a> - <a href="energy.html">Energy</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- MIND MELD ---------- -->
+	<div class="game-box p-2" id="mindMeld">
+		<h3>Mind Meld</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+</div>
+<p class="white">built</p></body>
+<footer>
+	<div class="d-flex flex-wrap justify-content-around">
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+	</div>
+</footer>
 </html>
