--- a/pages/pun.html
+++ b/pages/pun.html
@@ -1,34 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pun</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="../styles/style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Pun</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<link rel="stylesheet" href="../styles/style.css">
 </head>
-<header>
-  <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+<header id="top">
+	<div class="d-flex flex-wrap justify-content-around">
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+	</div>
 </header>
 <body>
-  <h1 class="text-center">Pun Games</h1>
-  <div>
-    <h5><a href="#185">185</a></h5>
-    <h5><a href="#drinkingWithMe">Drinking With Me</a></h5>
-    <h5><a href="#iLikeMyMen">I Like my Men/Lovers...</a></h5>
-    <h5><a href="#heyWaiter">Hey Waiter!</a></h5>
-    <h5><a href="#southernLawyer">Southern Lawyer</a></h5>
-    <h5><a href="#ourLoveIsLike">Our Love is Like...</a></h5>
-    <h5><a href="#personIsLike">Person is Like...</a></h5>
-    <h5><a href="#sexWithMe">Sex With Me</a></h5>
-    <h5><a href="#sherlock">Sherlock</a></h5>
-    <h5><a href="../index.html">Home</a></h5>
-  </div>
-  <footer>
-    <div class="d-flex flex-wrap justify-content-around">
-      <h5 class="mx-5 py-2"><a href="index.html">Home</a>
-      <h5 class="mx-5 py-2"><a href="pages/categories.html">Games Exerciese and Formats</a>
-    </div>
-  </footer>
-</body>
+	<h1 class="text-center my-3">Pun</h1>
+	<p class="text-center my-3">These games involve coming up with jokes and puns from the backline one at a time based of a simple suggestion.</p>
+		<div class="m-5 games-list">
+			<ul class="py-3">
+				<li>
+					<h5><a href="#185">185</a></h5>
+				</li>
+			</ul>
+		</div>
+
+<hr class="thick-hr">
+
+<div class="m-5">
+	<!-- ---------- 185 ---------- -->
+	<div class="game-box p-2" id="185">
+		<h3>185</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="performance.html">Performance</a> - <a href="pun.html">Pun</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+</div>
+<p class="white">built</p></body>
+<footer>
+	<div class="d-flex flex-wrap justify-content-around">
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+	</div>
+</footer>
 </html>
