--- a/pages/scene.html
+++ b/pages/scene.html
@@ -1,55 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Scenework</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="../styles/style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Scenework</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<link rel="stylesheet" href="../styles/style.css">
 </head>
-<header>
-  <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+<header id="top">
+	<div class="d-flex flex-wrap justify-content-around">
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+	</div>
 </header>
 <body>
-  <h1 class="text-center">Scene Based Games & Exercises</h1>
-  <div>
-    <h5><a href="#adGame">Ad Game</a></h5>
-    <h5><a href="#blindDate">Blind Date</a></h5>
-    <h5><a href="#change">Change AKA New Decision</a></h5>
-    <h5><a href="#characterPanel">Character Panel</a></h5>
-    <h5><a href="#dayInTheLife">Day in the Life</a></h5>
-    <h5><a href="#entrancesAndExits">Entrances and Exits</a></h5>
-    <h5><a href="#errands">Errands</a></h5>
-    <h5><a href="#expertPanel">Expert Panel</a></h5>
-    <h5><a href="#forwardReverse">Forward Reverse</a></h5>
-    <h5><a href="#freezeTag">Freeze Tag</a></h5>
-    <h5><a href="#genreRollercoaster">Genre Rollercoaster</a></h5>
-    <h5><a href="#halfLife">Half Life</a></h5>
-    <h5><a href="#highlander">Highlander</a></h5>
-    <h5><a href="#hitchHiker">Hitch Hiker</a></h5>
-    <h5><a href="#hollywoodDirector">Hollywood Director</a></h5>
-    <h5><a href="#honkDing">Honk Ding</a></h5>
-    <h5><a href="#hotelLobby">Hotel Lobby</a></h5>
-    <h5><a href="#hyperFlashback">Hyper Flashback</a></h5>
-    <h5><a href="#parallelUniverses">Parallel Universes</a></h5>
-    <h5><a href="#soundEffects">Sound Effects</a></h5>
-    <h5><a href="#sentenceGames">Sentence Game</a></h5>
-    <h5><a href="#sitStandBend">Sit Stand Bend</a></h5>
-    <h5><a href="#superheroInterview">Superhero Interview</a></h5>
-    <h5><a href="#textersNightmare">Texter's Nightmare</a></h5>
-    <h5><a href="#threeHeadedExpert">Three Header Expert</a></h5>
-    <h5><a href="#tripleDub">Triple Dub</a></h5>
-    <h5><a href="#typewriter">Typewriter</a></h5>
-    <h5><a href="#voiceOverRevenge">Voice Over/Voice Over Revenge</a></h5>
-    <h5><a href="#whyAreYouLate">Why Are You Late?</a></h5>
-    <h5><a href="#worldCrisis">World Crisis</a></h5>
-    <h5><a href="../index.html">Home</a></h5>
-  </div>
-  <footer>
-    <div class="d-flex flex-wrap justify-content-around">
-      <h5 class="mx-5 py-2"><a href="index.html">Home</a>
-      <h5 class="mx-5 py-2"><a href="pages/categories.html">Games Exerciese and Formats</a>
-    </div>
-  </footer>
-</body>
+	<h1 class="text-center my-3">Scenework</h1>
+	<p class="text-center my-3">These games and exercises involve the players making up the scene on the spot.</p>
+		<div class="m-5 games-list">
+			<ul class="py-3">
+				<li>
+					<h5><a href="#60SecondsOfSilence">60 Seconds of Silence</a></h5>
+				</li>
+				<li>
+					<h5><a href="#adGame">Ad Game</a></h5>
+				</li>
+				<li>
+					<h5><a href="#alphabetGame">Alphabet Game</a></h5>
+				</li>
+				<li>
+					<h5><a href="#change">Change AKA New Decision</a></h5>
+				</li>
+				<li>
+					<h5><a href="#dontTalkAboutTheThing">Don't Talk about the Thing</a></h5>
+				</li>
+				<li>
+					<h5><a href="#pillars">Pillars</a></h5>
+				</li>
+				<li>
+					<h5><a href="#sentenceGame">Sentence Game</a></h5>
+				</li>
+			</ul>
+		</div>
+
+<hr class="thick-hr">
+
+<div class="m-5">
+	<!-- ---------- 60 SECONDS OF SILENCE ---------- -->
+	<div class="game-box p-2" id="60SecondsOfSilence">
+		<h3>60 Seconds of Silence</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="exercises.html">Exercise</a> - <a href="scene.html">Scenework</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- AD GAME ---------- -->
+	<div class="game-box p-2" id="adGame">
+		<h3>Ad Game</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- ALPHABET GAME ---------- -->
+	<div class="game-box p-2" id="alphabetGame">
+		<h3>Alphabet Game</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- CHANGE AKA NEW DECISION ---------- -->
+	<div class="game-box p-2" id="change">
+		<h3>Change AKA New Decision</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Two players start a scene and a third acts as a host. The host will ring a bell or say a phrase like change! or new decision! periodically after a line of dialogue has been said. The player who said that last line of dialoque will have to say a new line of dialogue to replace it.</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Player 1: What do you want?</li><li>Player 2: I want a muffin.</li><li>Host: Change!</li><li>Player 2: I want a whole cake to myself</li><li>Host: Change!</li><li>Player 2: I want you to love me again!</li></ul></p><hr><p><strong>Tips:</strong><ul><li>Try to heighten each time you are made to change a line of dialogue and go for a drastic change on the third changed line.</li><br><li>As the host, utilize the rule of three most of the time, only occasionally making the players change only one line of dialogue or making them change many lines in a long run of changes.</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="child_friendly.html">Child Friendly</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="Torture.html">Torture</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- DON'T TALK ABOUT THE THING ---------- -->
+	<div class="game-box p-2" id="dontTalkAboutTheThing">
+		<h3>Don't Talk about the Thing</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="exercises.html">Exercise</a> - <a href="object_work.html">Object Work</a> - <a href="scene.html">Scenework</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- PILLARS ---------- -->
+	<div class="game-box p-2" id="pillars">
+		<h3>Pillars</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="audience_participation.html">Audience Participation</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- SENTENCE GAME ---------- -->
+	<div class="game-box p-2" id="sentenceGame">
+		<h3>Sentence Game</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentence.html">Sentence</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+</div>
+<p class="white">built</p></body>
+<footer>
+	<div class="d-flex flex-wrap justify-content-around">
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+	</div>
+</footer>
 </html>
