--- a/pages/torture.html
+++ b/pages/torture.html
@@ -1,46 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Torture</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="../styles/style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Torture</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<link rel="stylesheet" href="../styles/style.css">
 </head>
 <header id="top">
-  <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+	<div class="d-flex flex-wrap justify-content-around">
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+	</div>
 </header>
 <body>
-  <h1 class="text-center my-3">Torture Games</h1>
-  <div class="m-5 games-list">
-    <ul class="py-3">
-      <li>
-        <h5><a href="#gameTitle">Game Title</a></h5>
-      </li>
-    </ul>
-  </div>
+	<h1 class="text-center my-3">Torture</h1>
+	<p class="text-center my-3">These games involve torturing players by making them justify extreme points of view, perform strenuous actions, and/or pushing their mental faculties to the limit.</p>
+		<div class="m-5 games-list">
+			<ul class="py-3">
+				<li>
+					<h5><a href="#change">Change AKA New Decision</a></h5>
+				</li>
+			</ul>
+		</div>
 
-  <hr class="thick-hr">
+<hr class="thick-hr">
 
-  <div class="m-5">
-    <!-- ---------- GAME TITLE ---------- -->
-    <div class="game-box p-2" id="gameTitle">
-      <h3>Game Title</h3>
-      <hr>
-      <p>description</p>
-      <h6>tags</h6>
-      <a href="performance_games.html">Performace</a>
-      <hr>
-      <h6><a href="#top">Back to Top</a></h6>
-    </div>
-  
-    <hr class="thick-hr">
-  </div>
-  <footer>
-    <div class="d-flex flex-wrap justify-content-around">
-      <h5 class="mx-5 py-2"><a href="index.html">Home</a>
-      <h5 class="mx-5 py-2"><a href="pages/categories.html">Games Exerciese and Formats</a>
-    </div>
-  </footer>
-</body>
+<div class="m-5">
+	<!-- ---------- CHANGE AKA NEW DECISION ---------- -->
+	<div class="game-box p-2" id="change">
+		<h3>Change AKA New Decision</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Two players start a scene and a third acts as a host. The host will ring a bell or say a phrase like change! or new decision! periodically after a line of dialogue has been said. The player who said that last line of dialoque will have to say a new line of dialogue to replace it.</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Player 1: What do you want?</li><li>Player 2: I want a muffin.</li><li>Host: Change!</li><li>Player 2: I want a whole cake to myself</li><li>Host: Change!</li><li>Player 2: I want you to love me again!</li></ul></p><hr><p><strong>Tips:</strong><ul><li>Try to heighten each time you are made to change a line of dialogue and go for a drastic change on the third changed line.</li><br><li>As the host, utilize the rule of three most of the time, only occasionally making the players change only one line of dialogue or making them change many lines in a long run of changes.</li></ul><hr></p>		<h6>Tags</h6>
+		<a href="child_friendly.html">Child Friendly</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="Torture.html">Torture</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+</div>
+<p class="white">built</p></body>
+<footer>
+	<div class="d-flex flex-wrap justify-content-around">
+		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
+		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+	</div>
+</footer>
 </html>
